--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -11,8 +11,8 @@
   <link href="/css/friends.css" rel="stylesheet">
 </head>
 <body>
-  
-  <div class="dropdown">
+
+  <div class="dropdownF">
     <button id="dropbtn">Menu</button>
     <div id="myDropdown" class="dropdown-content">
             <a href="/home">Home</a>
