--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -10,7 +10,7 @@
 		<link href="/css/menu.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="dropdown">
+		<div class="dropdownMC">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
     			<a href="/home">Home</a>
