--- a/views/meetingsJoined.handlebars
+++ b/views/meetingsJoined.handlebars
@@ -21,7 +21,7 @@
   			</div>
 		</div>
 
-		<h3 class="header"> List of Meetings You Have Joined </h3>
+		<h3 class="headerJM">Joined Meetings</h3>
 		<ul id="joinedMeetings">
 			{{#each meetingsJoined}}
 			<li>You have joined the meeting: {{meetingName}} at {{time}}</li>
