--- a/views/profile.html
+++ b/views/profile.html
@@ -10,7 +10,7 @@
 		<link href="/css/menu.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="dropdown">
+		<div class="dropdownP">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
 				<a href="/home">Home</a>
@@ -21,11 +21,12 @@
   			</div>
 		</div>
   <style> 
-    #dropdown {
+    #dropdownP {
       margin-left: 2vw;
+      margin-top: -1vw;
     }
     h4 {
-      margin-top: 7vw;
+      margin-top: -14vw;
       text-align: center;
       font-size: 10vw;
     }
