--- a/views/profile.html
+++ b/views/profile.html
@@ -52,27 +52,18 @@
                   <h4>Profile</h4>
 
                  
-                  <img src="https://media.istockphoto.com/illustrations/antique-illustration-of-john-smith-admiral-of-new-england-illustration-id536014585?s=2048x2048" alt="profilepic" id="ProfilePic">
+                  <img src="" id="ProfilePic">
                 <div class="info">
-                  <p> John Smith </p>
+                  <p id="name"> John Smith </p>
             </div>
          
+
+    
 
 
 </body>
 <!--   Core JS Files   -->
-<script src="/js/jquery.min.js" type="text/javascript"></script>
-<script src="/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/js/material.min.js"></script>
-
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="/js/nouislider.min.js" type="text/javascript"></script>
-
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
-
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-<script src="/js/material-kit.js" type="text/javascript"></script>
+<script src="/js/profile.js" type="text/javascript"></script>
 
 </html>
 
