--- a/views/profile.html
+++ b/views/profile.html
@@ -46,21 +46,21 @@
       font-size: 8vw;
     }
 
+    #lg {
+      text-align: center;
+    }
+
   </style>
 		<body class="profile-page">
-
-
-                  <h4>Profile</h4>
-
-                 
-                  <img src="" id="ProfilePic">
-                <div class="info">
-                  <p id="name"> John Smith </p>
-            </div>
-         
-
-    
-
+      <h4>Profile</h4>
+      <img src="" id="ProfilePic">
+      <div class="info">
+          <p id="name"> John Smith </p>
+      </div>
+      
+      <div id="lg">
+        <input id="logout" class="btn btn-default" value="Logout"></input>
+      </div>
 
 </body>
 <!--   Core JS Files   -->
