Standardized titles.  Offset to balance the menu button.

--- a/views/profile.html
+++ b/views/profile.html
@@ -26,9 +26,11 @@
       margin-top: -1vw;
     }
     h4 {
-      margin-top: -14vw;
+      margin-top: -11vw;
       text-align: center;
-      font-size: 10vw;
+      margin-left: 6vw;
+      font-size: 30px;
+      font-weight: bold;
     }
     #ProfilePic{
       width: 60vw;
