--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -74,9 +74,11 @@ h4 {
 
 .headerMC {
     margin-left: 15%;
-    margin-top: -10vw;
+    margin-top: -12vw;
     text-align: center;
     font-weight: bold;
+    font-size: 30px;
+
 }
 
 .headerJM {
@@ -84,6 +86,7 @@ h4 {
     text-align: center;
     font-weight: bold;
     margin-top: 5vw;
+    font-size: 30px;
 }
 
 ul {
