--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -27,7 +27,7 @@
 
   <ul id="friendsList">
     {{#each friends}}
-    <li>
+    <li class = "listElements">
       Name: {{name}} | Username: {{username}}
     </li>
     <br>
