--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -24,7 +24,7 @@
 		<h3 class="headerMC">Meetings Created</h3>
 		<ul id= "meetingList">
 			{{#each meetingsCreated}}
-			<li> You created the meeting: {{meetingName}} at {{time}}</li>
+			<li class = "listElements"> You created the meeting: {{meetingName}} at {{time}}</li>
 			<br>
 			{{/each}}
 		</ul>
