--- a/views/meetingsJoined.handlebars
+++ b/views/meetingsJoined.handlebars
@@ -24,7 +24,7 @@
 		<h3 class="headerJM">Joined Meetings</h3>
 		<ul id="joinedMeetings">
 			{{#each meetingsJoined}}
-			<li>You have joined the meeting: {{meetingName}} at {{time}}</li>
+			<li class = "listElements">You have joined the meeting: {{meetingName}} at {{time}}</li>
 			{{/each}}
 		</ul>
 
