--- a/views/addMeeting.html
+++ b/views/addMeeting.html
@@ -8,6 +8,8 @@
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="/css/addMeeting.css" rel="stylesheet">
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 
