B test homepage done

--- a/views/homeB.handlebars
+++ b/views/homeB.handlebars
@@ -12,23 +12,14 @@
 		<link href="/css/material-kit.css" rel="stylesheet" />
 	</head>
 	<body>
-		<div id="instruction">
+		<!--<div id="instruction">
 			Search Your Meeting's Location!
-		</div>
+		</div>-->
 
-		<div class="container">
-			<div class="dropdown">
-  				<button id="dropbtn">Menu</button>
-  				<div id="myDropdown" class="dropdown-content">
-    				<a href="/home">Home</a>
-    				<a href="meetingsCreated">Meetings Created</a>
-    				<a href="meetingsJoined">Meetings Joined</a>
-    				<a href="friends">Friends</a>
-    				<a href="profile.html">Profile</a>
-  				</div>
-			</div>
-		</div>
-		<button id="addMeetingButton">Add Meeting at Pin</button>
+		<button id="profileButton">User Profile</button>
+		<button id="MeetingButton">Meetings</button>
+		<button id="FriendsButton">My Friends</button>
+		<button id="addMeetingButton">Add Meeting</button>
 
    		<div class="searchBarHolder">
      		<input id="pac-input" class="controls" type="text" placeholder="Meet at a Location...">
@@ -58,6 +49,6 @@
       		async defer></script>
 
 	    <script src="/js/homepageB.js"></script>
-	    <script src="/js/menuB.js"></script>
+	    <!--<script src="/js/menu.js"></script>-->
 	</body>
 </html>
