new login and signup work

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -37,7 +37,7 @@
      	<div id="map"></div> 
 
      	{{#each meetingsCreated}}
-			<div class="pings" id="{{meetingLocation}}">{{time}}</div>
+			<div class="pings" id="{{meetingLocation}}" style="display: none;">{{time}}</div>
 		{{/each}}
 
 
