--- a/views/signup-page.html
+++ b/views/signup-page.html
@@ -30,56 +30,50 @@
           <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
             <div class="card card-signup">
 
-              <form class="form" role="form" method="get">
+              <form class="form" role="form" method="get" action="/signedup">
 
                 <div class="header header-info text-center">
-                  <h4>Welcome to RUHereYet</h4>
+                  <h4>Sign Up</h4>
                 </div>
-
                 <div class="content">
 
-                  {{#each users}}
-                    <div class="users" id="{{password}}" style="display: none;">{{username}}</div>
-                  {{/each}}
-
                   <div class="input-group">
                     <span class="input-group-addon">
-                      <i class="material-icons">face</i>
-                    </span>
-                    <input type="text" id="SIusername" class="form-control" placeholder="Username..." required/>
+											<i class="material-icons">face</i>
+										</span>
+                    <input type="text" class="form-control" name="name" placeholder="First and Last Name..." required/>
                   </div>
 
+                  <div class="input-group">
+                    <span class="input-group-addon">
+											<i class="material-icons">account_circle</i>
+										</span>
+                    <input type="text" id="SUusername" class="form-control" name="username" placeholder="Username..." required/>
+                  </div>
 
                   <div class="input-group">
                     <span class="input-group-addon">
-                      <i class="material-icons">lock_outline</i>
-                    </span>
-                    <input type="password" id="SIpassword" placeholder="Password..." class="form-control" required/>
+											<i class="material-icons">lock_outline</i>
+										</span>
+                    <input type="password" id="SUpassword" placeholder="Password..." name="password" class="form-control" required/>
                   </div>
 
                 </div>
                 <div class="footer text-center">
-                  <input type="reset" id="SignIn" value = "Sign In" class="btn btn-simple btn-primary btn-lg">
-                  <p class="text-muted">Need an account?</p>
-                  <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
+                  <input type="submit" id="GetStarted" value = "Get Started" class="btn btn-simple btn-primary btn-lg">
+                  <p class="text-muted">Already have an account?</p>
+                  <a href = "/" class="btn btn-primary btn-simple">Sign In</a>
+                </div>
 
+              </form>
 
-                  <p class="facebookLogin">  Or Login Through Facebook
-                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-                  </fb:login-button>
-                </p>
-
-              </div>
-
-            </form>
-
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-</div>
+  </div>
 
 
 </body>
@@ -98,8 +92,5 @@
 <script src="/js/material-kit.js" type="text/javascript"></script>
 
 <script src="/js/login.js"></script>
-
-{{> facebook}}
-<script src="/js/facebook.js"></script>
 
 </html>
