--- a/views/profile.html
+++ b/views/profile.html
@@ -61,7 +61,9 @@
       </div>
       
       <div id="lg">
-        <input id="logout" class="btn btn-default" value="Logout"></input>
+        <form class="form" role="form" method="get" action='/logout'>
+          <input id="logout" type="submit" class="btn btn-default" value="Logout"></input>
+        </form>
       </div>
 
 </body>
