--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -29,6 +29,12 @@
 			{{/each}}
 		</ul>
 
+		<form id="meetingDelete" class="form" role="form" method="get" action='/deleteMeeting'>
+			<label for="deleteMeeting">Choose a Meeting to Delete:</label>
+          <input type="text" name="deleteMeeting" placeholder="Enter Name of Meeting"></input>
+          <input type="submit" class="btn btn-default" value="Delete"></input>
+        </form>
+
 		<script src="/js/menu.js"></script>
 	</body>
 </html>
