--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -59,10 +59,19 @@
 
                 </div>
                 <div class="footer text-center">
-                  <input type="reset" id="SignIn" value = "Sign In" class="btn btn-simple btn-primary btn-lg">
+                  {{#if viewAlt}}
+
+                  <input type="reset" id="SignInB" value = "Sign In" class="btn btn-simple btn-primary btn-lg" action>
                   <p class="text-muted">Need an account?</p>
                   <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
 
+                  {{else}}
+
+                  <input type="reset" id="SignIn" value = "Sign In" class="btn btn-simple btn-primary btn-lg" action>
+                  <p class="text-muted">Need an account?</p>
+                  <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
+
+                  {{/if}}
 
                   <p class="facebookLogin">  Or Login Through Facebook
                     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
