--- a/views/meetingsCreatedJoinedB.handlebars
+++ b/views/meetingsCreatedJoinedB.handlebars
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 
-		<a href="/home" id= "backbtn" class="btn btn-default">Back</a>
+		<a href="/homeB" id= "backbtn" class="btn btn-default">Back</a>
 
 		<div class="tab">
   			<button class="tablinks active" onclick="listMeeting(event, 'created')">Meetings Created</button>
