--- a/views/profileB.html
+++ b/views/profileB.html
@@ -10,7 +10,7 @@
 		<link href="/css/menu.css" rel="stylesheet">
 	</head>
 	<body>
-  	<a href="/home" id= "backbtn" class="btn btn-default">Back</a>
+  	<a href="/homeB" id= "backbtn" class="btn btn-default">Back</a>
   			
   <style>
     #backbtn {
