--- a/views/friendsB.handlebars
+++ b/views/friendsB.handlebars
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <a href="/home" id= "backbtn" class="btn btn-default">Back</a>
+  <a href="/homeB" id= "backbtn" class="btn btn-default">Back</a>
 
   <h3 id="friendsHeader" class="header">Friends</h3>
 
@@ -26,7 +26,7 @@
     <br>
   </ul>
 
-  <form id="addFriendForm" role="form" method="get" action="/addFriend">
+  <form id="addFriendForm" role="form" method="get" action="/addFriendB">
     <h4>Add a friend</h4>
     <div class="form-group">
       <label for="name">Name:</label>
