B navigation fully working, map not working on B

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -63,13 +63,13 @@
 
                   <input type="reset" id="SignInB" value = "Sign In" class="btn btn-simple btn-primary btn-lg" action>
                   <p class="text-muted">Need an account?</p>
-                  <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
+                  <a href = "/signup-page" class="btn btn-primary btn-simple">Sign Up</a>
 
                   {{else}}
 
                   <input type="reset" id="SignIn" value = "Sign In" class="btn btn-simple btn-primary btn-lg" action>
                   <p class="text-muted">Need an account?</p>
-                  <a href = "/signup-page.html" class="btn btn-primary btn-simple">Sign Up</a>
+                  <a href = "/signup-page" class="btn btn-primary btn-simple">Sign Up</a>
 
                   {{/if}}
 
