--- a/views/profileB.html
+++ b/views/profileB.html
@@ -58,7 +58,9 @@
       </div>
       
       <div id="lg">
-        <input id="logout" class="btn btn-default" value="Logout"></input>
+        <form class="form" role="form" method="get" action='/logoutB'>
+          <input id="logout" type="submit" class="btn btn-default" value="Logout"></input>
+        </form>
       </div>
 
 </body>
