--- a/views/signup-page.handlebars
+++ b/views/signup-page.handlebars
@@ -30,7 +30,11 @@
           <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
             <div class="card card-signup">
 
+              {{#if viewAlt}}
+              <form class="form" role="form" method="get" action="/signedupB">
+              {{else}}
               <form class="form" role="form" method="get" action="/signedup">
+              {{/if}}
 
                 <div class="header header-info text-center">
                   <h4>Sign Up</h4>
@@ -58,12 +62,23 @@
                     <input type="password" id="SUpassword" placeholder="Password..." name="password" class="form-control" required/>
                   </div>
 
+                {{#if viewAlt}}
+                </div>
+                <div class="footer text-center">
+                  <input type="submit" id="GetStartedB" value = "Get Started" class="btn btn-simple btn-primary btn-lg">
+                  <p class="text-muted">Already have an account?</p>
+                  <a href = "/viewAlt" class="btn btn-primary btn-simple">Sign In</a>
+                </div>
+
+                {{else}}
                 </div>
                 <div class="footer text-center">
                   <input type="submit" id="GetStarted" value = "Get Started" class="btn btn-simple btn-primary btn-lg">
                   <p class="text-muted">Already have an account?</p>
                   <a href = "/" class="btn btn-primary btn-simple">Sign In</a>
                 </div>
+
+                {{/if}}
 
               </form>
 
