update API version

--- a/views/homeB.handlebars
+++ b/views/homeB.handlebars
@@ -55,7 +55,7 @@
 
 		<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 		<script src="/js/material-kit.js" type="text/javascript"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?v=3.0&key=AIzaSyC0WRQl-Hgot5KsHhaHU9zLo4SgK5nL6M4&libraries=places&callback=initMap"
+		<script src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyC0WRQl-Hgot5KsHhaHU9zLo4SgK5nL6M4&libraries=places&callback=initMap"
       		async defer></script>
 
 	    <script src="/js/homepageB.js"></script>
