--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -23,11 +23,11 @@
 		<div class="dropdownMC">
   			<button id="dropbtn">Menu</button>
   			<div id="myDropdown" class="dropdown-content">
-    			<a href="/home">Home</a>
-    			<a href="meetingsCreated">Meetings Created</a>
-    			<a href="meetingsJoined">Meetings Joined</a>
-    			<a href="friends">Friends</a>
-    			<a href="profile.html">Profile</a>
+    				<a class ="navigated" href="/home">Home</a>
+    				<a class ="navigated" href="meetingsCreated">Meetings Created</a>
+    				<a class ="navigated" href="meetingsJoined">Meetings Joined</a>
+    				<a class ="navigated" href="friends">Friends</a>
+    				<a class ="navigated" href="profile.html">Profile</a>
   			</div>
 		</div>
 
