--- a/views/meetingsCreatedJoinedB.handlebars
+++ b/views/meetingsCreatedJoinedB.handlebars
@@ -22,6 +22,11 @@
 	<body>
 
 		<a href="/homeB" id= "backbtn" class="btn btn-default">Back</a>
+		<script> 
+			document.getElementById("backbtn").addEventListener("click", function() {
+				gtag("send", "event", "navigation", "click");
+			});
+		</script>
 
 		<div class="tab">
   			<button class="tablinks active" onclick="listMeeting(event, 'created')">Meetings Created</button>
