--- a/views/profileB.html
+++ b/views/profileB.html
@@ -21,6 +21,11 @@
 	</head>
 	<body>
   	<a href="/homeB" id= "backbtn" class="btn btn-default">Back</a>
+    <script> 
+      document.getElementById("backbtn").addEventListener("click", function() {
+        gtag("send", "event", "navigation", "click");
+      });
+    </script>
   			
   <style>
     #backbtn {
