--- a/views/meetingsCreated.handlebars
+++ b/views/meetingsCreated.handlebars
@@ -45,6 +45,7 @@
           <input type="submit" class="btn btn-default" value="Delete"></input>
         </form>
 
+        <script src="/js/jquery.min.js" type="text/javascript"></script>
 		<script src="/js/menu.js"></script>
 	</body>
 </html>
