--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -58,6 +58,7 @@
     <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
   </form>
 
+  <script src="/js/jquery.min.js" type="text/javascript"></script>
   <script src="/js/menu.js"></script>
 </body>
 </html>
