--- a/views/meetingsJoined.handlebars
+++ b/views/meetingsJoined.handlebars
@@ -38,6 +38,7 @@
 			{{/each}}
 		</ul>
 
+		<script src="/js/jquery.min.js" type="text/javascript"></script>
 		<script src="/js/menu.js"></script>
 	</body>
 </html>
