--- a/views/profile.html
+++ b/views/profile.html
@@ -78,6 +78,7 @@
 
 </body>
 <!--   Core JS Files   -->
+<script src="/js/jquery.min.js" type="text/javascript"></script>
 <script src="/js/profile.js" type="text/javascript"></script>
 
 </html>
