--- a/views/homeB.handlebars
+++ b/views/homeB.handlebars
@@ -70,7 +70,7 @@
 	    <script src="/js/homepageB.js"></script>
 	    <script> 
 			$(".navigated").click(function(){
-				gtag("send", "event", "navigation", "click");
+				ga("send", "event", "navigation", "click");
 			});
 	    </script>
 	    <!--<script src="/js/menu.js"></script>-->
