--- a/views/friendsB.handlebars
+++ b/views/friendsB.handlebars
@@ -34,7 +34,7 @@
   <a href="/homeB" id="backbtn" class="btn btn-default">Back</a>
   <script> 
     document.getElementById("backbtn").addEventListener("click", function() {
-      gtag("send", "event", "navigation", "click");
+      ga("send", "event", "navigation", "click");
     });
   </script>
 
