--- a/views/createMeeting.handlebars
+++ b/views/createMeeting.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<!-- Google Analytics Content Experiment code -->
+		<!-- Google Analytics Content Experiment code 
 		<script>function utmx_section(){}function utmx(){}(function(){var
 			k='170908741-1',d=document,l=d.location,c=d.cookie;
 			if(l.search.indexOf('utm_expid='+k)>0)return;
@@ -15,7 +15,7 @@
 				valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 				'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
 			</script><script>utmx('url','A/B');</script>
-			<!-- End of Google Analytics Content Experiment code -->
+			 End of Google Analytics Content Experiment code -->
 		<!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115142761-1"></script>
 		<!--<script>
