--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -46,7 +46,9 @@
 	</head>
 	<body>
 		<div id="instruction">
-			Search Your Meeting's Location!
+			<font color ="white">
+			Search Your Meeting Location!
+			</font>
 		</div>
 
 		<div class="container">
