--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,4 +1,8 @@
 /*Container for all dropdown content */
+#cancel {
+    background-color: #FFCF00;
+}
+
 .container {
     z-index: 10;
     position: fixed; 
@@ -7,9 +11,13 @@
 }
 
 body {
-    background-color: #F0F8FF;
+    background-color: #FDF8FF;
  
 
+}
+
+.btn-default {
+    background: #FFCF00;
 }
 
 /* Dropdown Button */
@@ -19,12 +27,13 @@ body {
     font-size: 25px;
     cursor: pointer;
     border-radius: 10px;
+    background-color: #FFCF00;
 }
 
 
 /* Dropdown button on hover & focus */
 #dropbtn:hover, #dropbtn:focus {
-    background-color: #2980B9;
+    background-color: #FFCF00;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -46,6 +55,7 @@ body {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 10;
+    background-color: #FFCF00;
 }
 
 /* Links inside the dropdown */
@@ -82,7 +92,7 @@ h4 {
 }
 
 .headerJM {
-    margin-left: 20%;
+    margin-left: 15%;
     text-align: center;
     font-weight: bold;
     margin-top: 5vw;
@@ -102,7 +112,7 @@ ul {
 li {
   padding:13px;
   border-color: black;
-  border-style: double;
+  border-bottom: 3px solid black;
   border-radius: 4px;
   text-align: center;
   width: 100%;
@@ -151,7 +161,7 @@ li {
 }
 
 #friendsHeader{
-    margin-right: 20%;
+    margin-right: 28%;
 
 
 }
