--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -69,7 +69,7 @@
   </ul>
 
   <form id="addFriendForm" role="form" method="get" action="/addFriend">
-    <h4>Add a friend</h4>
+    <h4>Add Friends</h4>
     <div class="form-group">
       <label for="name">Name:</label>
       <input type="text" class="form-control" id="name" placeholder="Ex: John" name="name">
@@ -78,7 +78,7 @@
       <label for="username">Username:</label>
       <input type="text" class="form-control" id="username" placeholder="Ex: JohnSmith1" name="username">
     </div>
-    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
+    <input type="submit" id="submitBtn" class="btn btn-default" value="Add Friend"></input>
   </form>
 
   <script src="/js/jquery.min.js" type="text/javascript"></script>
