--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -34,6 +34,8 @@ html, body {
   font-size: 15px;
 }
 
+.dropdown-content a:hover {background-color: #ddd}
+
 #infowindow-content .title {
  font-weight: bold;
 }
