edit to addmeeting page css

--- a/public/css/addMeeting.css
+++ b/public/css/addMeeting.css
@@ -12,7 +12,7 @@
 }
 
 body {
-	 background-color: #F0F8FF;
+    background-image: url('/img/marble.jpg');
 }
 
 .label {
@@ -21,7 +21,6 @@ body {
 
 
 #submit {
-
 	margin-right: 0%;
 }
 
@@ -39,6 +38,7 @@ body {
 	margin-top: 4vw;
 	width:20%;
 	background-color: #FFCF00;
+	background: #FFCF00;
 }
 
 h3{
@@ -50,6 +50,7 @@ h3{
 #submitBtn{
 	width:100%;
 	background-color: #FFCF00;
+	background: #FFCF00;
 }
 
 body {
