added logout to menu

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -60,6 +60,7 @@
     				<a class ="navigated" href="meetingsJoined">Meetings Joined</a>
     				<a class ="navigated" href="friends">Friends</a>
     				<a class ="navigated" href="profile.html">Profile</a>
+    				<a class ="navigated" href="/logout">Logout</a>
   				</div>
 			</div>
 		</div>
