--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <title>RUHereYet Signup</title>
+  <title>EnRoute Signup</title>
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -66,7 +66,7 @@
               <form class="form" role="form" method="get">
 
                 <div class="header header-info text-center">
-                  <h4>Welcome to RUHereYet</h4>
+                  <h4>Welcome to EnRoute</h4>
                 </div>
 
                 <div class="content">
